--- a/arctictut_design.css
+++ b/arctictut_design.css
@@ -1,7 +1,8 @@
 /**
- * Design Elements - additional  CSS for the Arctic template
+ * Design Elements - additional  CSS for the Arctictut template
  *
  * @author Michael Klier <chi@chimeric.de>
+ * @author Laura Eun <laura.eun@live.de>
  */
 
 /* ----- General Elements ----- */
