--- a/arctictut_layout.css
+++ b/arctictut_layout.css
@@ -1,5 +1,5 @@
 /**
- * Tableless Layout - additional CSS for Arctic Template
+ * Tableless Layout - additional CSS for Arctictut Template
  *
  * @author Michael Klier <chi@chimeric.de>
  */
